--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -45,6 +45,7 @@
                     <li><a asp-page="/About">About</a></li>
                     <li><a asp-page="/Contact">Contact</a></li>
                     <li><a asp-page="/prufa">Rafnar</a></li>
+                    <li><a asp-page="/Events/Index">Events</a></li>
                 </ul>
                 <partial name="_LoginPartial" />
             </div>
