--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -57,6 +57,7 @@
         @RenderBody()
         <hr />
         <footer>
+            <h2>Fótutr</h2>
             <p>&copy; 2019 - webApi</p>
         </footer>
     </div>
