slökkt var á cookies

--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -13,7 +13,7 @@
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Input.fyrstName"></label>
+                <label>Fyrst Name *</label>
                 <input asp-for="Input.fyrstName" class="form-control" />
                 <span asp-validation-for="Input.fyrstName" class="text-danger"></span>
             </div>
@@ -23,22 +23,22 @@
                 <span asp-validation-for="Input.middleName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.surName"></label>
+                <label>Surname *</label>
                 <input asp-for="Input.surName" class="form-control" />
                 <span asp-validation-for="Input.surName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.Password"></label>
+                <label>Password *</label>
                 <input asp-for="Input.Password" class="form-control" />
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.ConfirmPassword"></label>
+                <label>Confirmation password *</label>
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.Email"></label>
+                <label>Email *</label>
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
@@ -48,12 +48,12 @@
                 <span asp-validation-for="Input.other_email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.phone"></label>
+                <label>Phone *</label>
                 <input asp-for="Input.phone" class="form-control" />
                 <span asp-validation-for="Input.phone" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.address"></label>
+                <label>Address *</label>
                 <input asp-for="Input.address" class="form-control" />
                 <span asp-validation-for="Input.address" class="text-danger"></span>
             </div>
@@ -83,7 +83,7 @@
                 <span asp-validation-for="Input.city" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.country"></label>
+                <label>Country *</label>
                 <input asp-for="Input.country" class="form-control" />
                 <span asp-validation-for="Input.country" class="text-danger"></span>
             </div>
