Eytt út öllum IdentityUser og sett inn Myuser í staðinN

--- a/Pages/Shared/_CookieConsentPartial.cshtml
+++ b/Pages/Shared/_CookieConsentPartial.cshtml
@@ -5,8 +5,8 @@
     var showBanner = !consentFeature?.CanTrack ?? false;
     var cookieString = consentFeature?.CreateConsentCookie();
 }
-<!--Breytti þessú í ! HelgiGrétar -->
-@if (!showBanner)
+
+@if (showBanner)
 {
     <nav id="cookieConsent" class="navbar navbar-default navbar-fixed-top" role="alert">
         <div class="container">
