--- a/Pages/Events/Create.cshtml
+++ b/Pages/Events/Create.cshtml
@@ -11,7 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post">
+        <form method="post" asp-controller="UploadFiles" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Event.Title" class="control-label"></label>
@@ -22,6 +22,9 @@
                 <label asp-for="Event.text" class="control-label"></label>
                 <input asp-for="Event.text" class="form-control" />
                 <span asp-validation-for="Event.text" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="file" name="files" multiple />
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
