--- a/Pages/Events/Edit.cshtml
+++ b/Pages/Events/Edit.cshtml
@@ -25,6 +25,11 @@
                 <span asp-validation-for="Event.text" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Event.Image" class="control-label"></label>
+                <input asp-for="Event.Image" class="form-control" />
+                <span asp-validation-for="Event.Image" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </form>
