--- a/Pages/Events/Delete.cshtml
+++ b/Pages/Events/Delete.cshtml
@@ -24,6 +24,12 @@
         <dd>
             @Html.DisplayFor(model => model.Event.text)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Event.Image)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Event.Image)
+        </dd>
     </dl>
     
     <form method="post">
