--- a/Pages/Events/Details.cshtml
+++ b/Pages/Events/Details.cshtml
@@ -23,6 +23,12 @@
         <dd>
             @Html.DisplayFor(model => model.Event.text)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Event.Image)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Event.Image)
+        </dd>
     </dl>
 </div>
 <div>
