--- a/Pages/Events/Edit.cshtml
+++ b/Pages/Events/Edit.cshtml
@@ -25,7 +25,7 @@
                 <span asp-validation-for="Event.text" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="file" name="files" class="btn btn-default" multiple/>
+                <input type="file" name="files" value="Event.Image" multiple/>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
