--- a/wwwroot/css/navBar.css
+++ b/wwwroot/css/navBar.css
@@ -1,1 +1,23 @@
-﻿
+﻿.logo {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.logo-cont {
+    width: 100px;
+    height: 100px;
+}
+
+.slider {
+    width: 100%;
+    height: auto;
+    padding-bottom: 5%;
+}
+
+.cont {
+    padding: 20px;
+    padding-bottom: 5%;
+    width: 100%;  
+    display: flex;
+    text-align: center;
+}
