--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="cont">
     <div class="container">
         <div>
-            <h1>Company Name</h1>        
+            <h1>Company Name</h1>
         </div>
         <div>
             <a><img class="logo-cont" alt="Brand" src="~/images/logo.png"></a>
@@ -15,83 +15,74 @@
     </div>
 </div>
 
-<div class="container">
-    <div class="col-lg-pull-0 slider">
-        <div class="rammi">
-        <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner" role="listbox">
-                <div class="item active">
-                    <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
-                    <div class="carousel-caption" role="option">
-                        <p>
-                            Learn how to build ASP.NET apps that can run anywhere.
-                            <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                                Learn More
-                            </a>
-                        </p>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
-                    <div class="carousel-caption" role="option">
-                        <p>
-                            There are powerful new features in Visual Studio for building modern web apps.
-                            <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                                Learn More
-                            </a>
-                        </p>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="~/images/banner3.svg" alt="Microsoft Azure" class="img-responsive" />
-                    <div class="carousel-caption" role="option">
-                        <p>
-                            Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                            <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                                Learn More
-                            </a>
-                        </p>
-                    </div>
+<div class="bd-example">
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="~/images/banner2.svg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>First slide label</h5>
+                    <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                 </div>
             </div>
-            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
+            <div class="carousel-item">
+                <img src="~/images/banner1.svg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Second slide label</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+            </div>
         </div>
-        </div>
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
 </div>
 
-@foreach (var item in Model.Event)
+@if (Model.Event.Count > 0)
 {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.text)
-        </td>
-        <td>
-            <img src="~/images/events/@Html.DisplayFor(modelItem => item.Image)" style="height:200px;width:200px;" />
-        </td>
-        <td>
-            <a asp-page="Events/Edit" asp-route-id="@item.Id">Edit</a> |
-            <a asp-page="Events/Details" asp-route-id="@item.Id">Details</a> |
-            <a asp-page="Events/Delete" asp-route-id="@item.Id">Delete</a>
-        </td>
-    </tr>
+    <div class="cont">
+        <div class="container">
+            <div>
+                <h1>Uppcoming events</h1>
+            </div>
+        </div>
+    </div>
+    <div class="cart container">
+        @foreach (var item in Model.Event)
+        {
+            <div class="card-size">
+                <div class="card" style="width: 18rem;">
+                    <img class="images card-image-top" src="~/images/events/@Html.DisplayFor(modelItem => item.Image)" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Card title</h5>
+                        <p class="card-text">Starts: Date 11:10:2019</p>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
 }
-
+else
+{
+    <div class="cont">
+        <div class="container">
+            <div>
+                <h1>No uppcoming events</h1>
+            </div>
+        </div>
+    </div>
+}
 
 <div class="row">
     <div class="col-md-3">
