--- a/wwwroot/css/navBar.css
+++ b/wwwroot/css/navBar.css
@@ -1,4 +1,8 @@
-﻿.logo {
+﻿img {
+    max-width: 100%;
+    max-height: 100%;
+}
+.logo {
     max-width: 100%;
     max-height: 100%;
 }
@@ -10,7 +14,7 @@
 
 .slider {
     width: 100%;
-    height: auto;
+    height: 100%;
     padding-bottom: 5%;
 }
 
@@ -20,4 +24,25 @@
     width: 100%;  
     display: flex;
     text-align: center;
+}
+
+.cart {
+    display: flex;
+    flex-flow: row wrap;
+    /* This aligns items to the end line on main-axis */
+    justify-content: center;
+}
+
+.card-size {
+    margin: 2rem;
+    background: #F5F5DC;
+    border: solid 0.4px #5F9EA0;
+}
+
+.images {
+    height: 200px;
+}
+
+.black {
+    background: black;
 }
