added connection to allot of column in register

--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -86,6 +86,7 @@
                 <label>Coutry *</label>
                 <br />
                 <select class="form-control">
+                    <option value="none">Choose a Country</option>
                     <option value="Afghanistan">Afghanistan</option>
                     <option value="Albania">Albania</option>
                     <option value="Algeria">Algeria</option>
