--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -83,7 +83,7 @@
                 <span asp-validation-for="Input.city" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label>Coutry *</label>
+                <label>Country *</label>
                 <br />
                 <select class="form-control">
                     <option value="Afghanistan">Afghanistan</option>
