Fokkað upp countries

--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -86,7 +86,7 @@
                 <label>Country *</label>
                 <br />
                 <select class="form-control">
-                    <option value="none">Choose a Country</option>
+                    <option value="">Choose a Country</option>
                     <option value="Afghanistan">Afghanistan</option>
                     <option value="Albania">Albania</option>
                     <option value="Algeria">Algeria</option>
