lagað eina stafsetningarvillu

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -54,7 +54,7 @@
     <div class="cont">
         <div class="container">
             <div>
-                <h1>Uppcoming events</h1>
+                <h1>Upcoming events</h1>
             </div>
         </div>
     </div>
@@ -78,7 +78,7 @@ else
     <div class="cont">
         <div class="container">
             <div>
-                <h1>No uppcoming events</h1>
+                <h1>No upcoming events</h1>
             </div>
         </div>
     </div>
