--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
     </environment>
 </head>
 <body>
+
     <nav class="navbar navbar-expand-lg navbar-dark navbar-full fixed-top" style="background-color: #222; border-color:#080808" >
         <div class="container">
             <a class="navbar-brand" href="#">Navbar</a>
@@ -36,15 +37,13 @@
                     <li class="nav-item active"><a class="nav-link" asp-page="/About">About</a></li>
                     <li class="nav-item active"><a class="nav-link" asp-page="/Contact">Contact</a></li>
                     <li class="nav-item active"><a class="nav-link" asp-page="/prufa">Rafnar</a></li>
-                    <li class="nav-item active"><a class="nav-link" asp-page="/Events/Index">Events</a></li>
+                    <li class="nav-item active"><a class="nav-link" asp-page="/Events/Index">Create Event</a></li>
+                    <li class="nav-item active"><a class="nav-link" asp-page="/Event">Events</a></li>
                 </ul>
                 <partial name="_LoginPartial" />
             </div>
         </div>
     </nav>
-
-
-
 
     <div>
         <div id="fb-root"></div>
@@ -57,33 +56,16 @@
                 fjs.parentNode.insertBefore(js, fjs);
             }(document, 'script', 'facebook-jssdk'));</script>
     </div>
-
-
         
     <partial name="_CookieConsentPartial" />
 
     <div class="container body-content">
 
-
-
-
         @RenderBody()
-    
-        
     
     </div>
 
-    <footer class="text-center sticky-bottom">
-        <nav class="footercontent">
-            <a href='http://blog.jthink.net' target='_blank' title='Jthink blog'><img src="http://jthink.net/images/blogger.png" alt="Jthink blog" title="Jthink blog" class="btn btn-outline"/></a>
-            <a href="https://www.facebook.com/pages/Jaikoz/15843367311" target="_blank" title="Jthink Facebook page"><img src="http://jthink.net/images/facebook.png" alt="Jthink Facebook page" title="Jthink Facebook page" height="32" width="32"/></a>&nbsp;
-            <a href="https://plus.google.com/b/103554086121439078551/+JthinkNet2/posts" target="_blank" title="Jthink Google+ page"><img src="http://jthink.net/images/google_plus.png" alt="google_plus" title="Jthink Google+ page" height="32" width="32"/></a>&nbsp;
-            <a href="http://youtube.com/jthinkltd" target="_blank" title="Jthink YouTube channel"><img src="http://jthink.net/images/youtube.png" alt="Jthink YouTube channel" title="Jthink YouTube channel" height="32" width="32"/></a>
-            <a href="mailto:paultaylor@jthink.net" target="_blank" title="Email Paul at Jthink"><img src="http://jthink.net/images/email.png" alt="Email Paul at Jthink" title="Email Paul at Jthink" height="32" width="32"/></a>&nbsp;
-            <a href="http://mad.ly/signups/104159/join" target="_blank" title="Subscribe to Weekly Newsletter"><img src="http://jthink.net/images/subscribe_newsletter.png" alt="Subscribe to Weekly Newsletter" title="Subscribe to Weekly Newsletter"/></a>&nbsp;
-        </nav>
-            <span class="text-muted">Copyright JThink Ltd 2004 - 2018 All rights reserved. All trademarks acknowledged</span>
-    </footer>
+    <partial name="_footer"/>
 
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
