--- a/Pages/Events/Delete.cshtml
+++ b/Pages/Events/Delete.cshtml
@@ -5,36 +5,30 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Event</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Event.Title)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Event.Title)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Event.text)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Event.text)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Event.Image)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Event.Image)
-        </dd>
-    </dl>
-    
-    <form method="post">
-        <input type="hidden" asp-for="Event.Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-page="./Index">Back to List</a>
-    </form>
+<div class="cont">
+    <div class="container">
+        <div>
+            <h1>Delete Event</h1>
+            <h3>Are you sure you want to delete this?</h3>
+        </div>
+    </div>
 </div>
+
+
+<div class="cart container">
+    <div class="card mb-3" style="width: 36rem;">
+        <img class="card-img-top" src="~/images/events/@Model.Event.Image" alt="Card image cap">
+        <div class="card-body">
+            <h5 class="card-title">@Model.Event.Title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <form method="post">
+                <input type="hidden" asp-for="Event.Id" />
+                <input type="submit" value="Delete" class="btn btn-default" /> |
+                <a asp-page="./Index">Back to List</a>
+            </form>
+        </div>
+    </div>
+</div>
+
