--- a/Pages/Events/Edit.cshtml
+++ b/Pages/Events/Edit.cshtml
@@ -3,40 +3,53 @@
 
 @{
     ViewData["Title"] = "Edit";
+
 }
 
-<h2>Edit</h2>
 
-<h4>Event</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post" asp-controller="UploadFiles" enctype="multipart/form-data">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Event.Id" />
-            <div class="form-group">
-                <label asp-for="Event.Title" class="control-label"></label>
-                <input asp-for="Event.Title" class="form-control" />
-                <span asp-validation-for="Event.Title" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Event.text" class="control-label"></label>
-                <input asp-for="Event.text" class="form-control" />
-                <span asp-validation-for="Event.text" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="file" name="files" value="Event.Image" multiple/>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </form>
+<div class="cont">
+    <div class="container">
+        <div>
+            <h1>Edit Event</h1>
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-page="./Index">Back to List</a>
+
+
+<div class="cart container">
+    <div class="card mb-3" style="width: 36rem;">
+        <img class="card-img-top" src="~/images/events/@Model.Event.Image" alt="Card image cap">
+        <div class="card-body">
+            <h5 class="card-title">@Model.Event.Title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <form method="post" asp-controller="UploadFiles" enctype="multipart/form-data">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="Event.Id" />
+                <div class="form-group">
+                    <label asp-for="Event.Title" class="control-label"></label>
+                    <input asp-for="Event.Title" class="form-control" />
+                    <span asp-validation-for="Event.Title" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Event.text" class="control-label"></label>
+                    <input asp-for="Event.text" class="form-control" />
+                    <span asp-validation-for="Event.text" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="file" name="files" value="Event.Image" multiple />
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Save" class="btn btn-default" />
+                </div>
+                <a asp-page="./Index">Back to List</a>
+            </form>
+        </div>
+    </div>
 </div>
+
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
