--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model webApi.Pages.Events.IndexModel
+@model webApi.Pages.IndexModel
 @{
     ViewData["Title"] = "Home page";
 }
@@ -54,6 +54,36 @@ else
         </div>
     </div>
 }
+
+<div class="cont">
+    <div class="container">
+        <div>
+            <h1>Social media</h1>
+        </div>
+    </div>
+</div>
+
+<div class="cont">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm ">
+                <div class="fb-page" data-href="https://www.facebook.com/European-Association-for-Behaviour-Analysis-144073318974784/" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+                    <blockquote cite="https://www.facebook.com/European-Association-for-Behaviour-Analysis-144073318974784/" class="fb-xfbml-parse-ignore">
+                        <a href="https://www.facebook.com/European-Association-for-Behaviour-Analysis-144073318974784/">European Association for Behaviour Analysis</a>
+                    </blockquote>
+                </div>
+            </div>
+            <div class="col-sm ">
+                <div class="fb-page" data-href="https://www.facebook.com/European-Association-for-Behaviour-Analysis-144073318974784/" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+                    <blockquote cite="https://www.facebook.com/European-Association-for-Behaviour-Analysis-144073318974784/" class="fb-xfbml-parse-ignore">
+                        <a href="https://www.facebook.com/European-Association-for-Behaviour-Analysis-144073318974784/">European Association for Behaviour Analysis</a>
+                    </blockquote>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <div class="row">
     <div class="col-md-3">
