--- a/Pages/Events/Index.cshtml
+++ b/Pages/Events/Index.cshtml
@@ -26,7 +26,7 @@
                 <img class="images card-image-top" src="~/images/events/@Html.DisplayFor(modelItem => item.Image)" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title text-center">Title: @Html.DisplayFor(modelItem => item.Title)</h5>
-                    <p class="card-text">Text: @Html.DisplayFor(modelItem => item.Title)  </p>
+                    <p class="card-text">Text: @Html.DisplayFor(modelItem => item.Title)  Lorem Ipsum.</p>
                     <p class="card-text">Starts: Date: Vanntar</p>
                     <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
                     <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
