--- a/Pages/Events/Create.cshtml
+++ b/Pages/Events/Create.cshtml
@@ -5,33 +5,41 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Create</h2>
-
-<h4>Event</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post" asp-controller="UploadFiles" enctype="multipart/form-data">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Event.Title" class="control-label"></label>
-                <input asp-for="Event.Title" class="form-control" />
-                <span asp-validation-for="Event.Title" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Event.text" class="control-label"></label>
-                <input asp-for="Event.text" class="form-control" />
-                <span asp-validation-for="Event.text" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="file" name="files" multiple />
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </form>
+<div class="cont">
+    <div class="container">
+        <div>
+            <h1>Create Event</h1>
+        </div>
     </div>
 </div>
+
+<div class="cart container">
+    <div class="row">
+        <div class="col-md-12">
+            <form method="post" asp-controller="UploadFiles" enctype="multipart/form-data">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Event.Title" class="control-label"></label>
+                    <input asp-for="Event.Title" class="form-control" />
+                    <span asp-validation-for="Event.Title" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Event.text" class="control-label"></label>
+                    <input asp-for="Event.text" class="form-control" />
+                    <span asp-validation-for="Event.text" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="file" name="files" multiple />
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-default" />
+                </div>
+            </form>
+        </div>
+    </div>
+    
+</div>
+
 
 <div>
     <a asp-page="Index">Back to List</a>
