--- a/Areas/Identity/Pages/Account/Admin/ChangePassword.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/ChangePassword.cshtml
@@ -1,9 +1,9 @@
 ﻿@page
-@model ChangePasswordAdminModel
+@model webApi.Areas.Identity.Pages.Account.Admin.ChangePasswordAdminModel
 @{
     ViewData["Title"] = "Change password";
+    Layout = "~/Areas/Identity/Pages/Account/Admin/_Layout.cshtml";
 }
-
 <h4>@ViewData["Title"]</h4>
 @Html.Partial("_StatusMessage", Model.StatusMessage)
 <div class="row">
