--- a/Areas/Identity/Pages/Account/Admin/_Layout.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/_Layout.cshtml
@@ -9,7 +9,7 @@
     <hr />
     <div class="row">
         <div class="col-md-3">
-            <partial name="_ManageNav" />
+            <partial name="_AdminNav" />
         </div>
         <div class="col-md-9">
             @RenderBody()
