--- a/Areas/Identity/Pages/Account/Admin/_AdminNav.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/_AdminNav.cshtml
@@ -5,4 +5,6 @@
 <ul class="nav nav-pills nav-stacked">
     <li class="@ManageAdminPages.IndexNavClass(ViewContext)"><a asp-page="./Index">Profile</a></li>
     <li class="@ManageAdminPages.ChangePasswordNavClass(ViewContext)"><a id="change-password" asp-page="./ChangePassword">Password</a></li>
+    <li class="@ManageAdminPages.ManageUsersNavClass(ViewContext)"><a id="change-password" asp-page="./ManageUsers">Manage Users</a></li>
+    
 </ul>
