--- a/Areas/Identity/Pages/Account/Admin/_Layout.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/_Layout.cshtml
@@ -2,7 +2,7 @@
     Layout = "/Areas/Identity/Pages/_Layout.cshtml";
 }
 
-<h2>Manage your account</h2>
+<h2>Manage your Admin account</h2>
 
 <div>
     <h4>Change your Admin settings</h4>
