byrjaður á manage user html

--- a/Areas/Identity/Pages/Account/Admin/ManageUsers.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/ManageUsers.cshtml
@@ -10,23 +10,18 @@
 <h2>Manage users</h2>
 <table>
     <tr>
-        <th>Email</th>
+        <th>First name</th>
+        <th>Middle name</th>
+        <th>Last name</th>
+        <th>Address</th>
+        <th>City</th>
+        <th>Phone number</th>
+        <th>email</th>
+        <th>email Confirmed</th>
+        <th>registered</th>
+        <th>affiliation</th>
+        <th>Payment confirmed</th>
     </tr>
-    <tr>
-        <td>hehehe</td>
-    </tr>
-    <tr>
-        <td>hehehe</td>
-    </tr><tr>
-    <td>hehehe</td>
-</tr><tr>
-    <td>hehehe</td>
-</tr><tr>
-    <td>hehehe</td>
-</tr><tr>
-    <td>hehehe</td>
-</tr><tr>
-    <td>hehehe</td>
-</tr>
+    
 </table>
 
