edit events er komið á heimasvæði

--- a/Areas/Identity/Pages/Account/Admin/Events/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Events/Index.cshtml
@@ -3,6 +3,7 @@
 
 @{
     ViewData["Title"] = "Index";
+    Layout = "~/Areas/Identity/Pages/Account/Admin/_Layout.cshtml";
 }
 
 <div class="cont">
