--- a/Areas/Identity/Pages/Account/Admin/Events/Delete.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Events/Delete.cshtml
@@ -1,18 +1,20 @@
 ﻿@page
-@model webApi.Pages.Events.DetailsModel
+@model webApi.Pages.Events.DeleteModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Delete";
+    Layout = "~/Areas/Identity/Pages/Account/Admin/_Layout.cshtml";
 }
+
 
 <div class="cont">
     <div class="container">
         <div>
-            <h1>Details</h1>
+            <h1>Delete Event</h1>
+            <h3>Are you sure you want to delete this?</h3>
         </div>
     </div>
 </div>
-
 
 
 <div class="cart container">
@@ -22,12 +24,12 @@
             <h5 class="card-title">@Model.Event.Title</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            <a asp-page="./Edit" asp-route-id="@Model.Event.Id">Edit</a> |
-            <a asp-page="./Index">Back to List</a>
+            <form method="post">
+                <input type="hidden" asp-for="Event.Id" />
+                <input type="submit" value="Delete" class="btn btn-default" /> |
+                <a asp-page="./Index">Back to List</a>
+            </form>
         </div>
     </div>
 </div>
 
-<div>
-    <a asp-page="./Index">Back to List</a>
-</div>
