--- a/Areas/Identity/Pages/Account/Admin/Events/Details.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Events/Details.cshtml
@@ -1,19 +1,19 @@
 ﻿@page
-@model webApi.Pages.Events.DeleteModel
+@model webApi.Pages.Events.DetailsModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Details";
+    Layout = "~/Areas/Identity/Pages/Account/Admin/_Layout.cshtml";
 }
-
 
 <div class="cont">
     <div class="container">
         <div>
-            <h1>Delete Event</h1>
-            <h3>Are you sure you want to delete this?</h3>
+            <h1>Details</h1>
         </div>
     </div>
 </div>
+
 
 
 <div class="cart container">
@@ -23,12 +23,12 @@
             <h5 class="card-title">@Model.Event.Title</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            <form method="post">
-                <input type="hidden" asp-for="Event.Id" />
-                <input type="submit" value="Delete" class="btn btn-default" /> |
-                <a asp-page="./Index">Back to List</a>
-            </form>
+            <a asp-page="./Edit" asp-route-id="@Model.Event.Id">Edit</a> |
+            <a asp-page="./Index">Back to List</a>
         </div>
     </div>
 </div>
 
+<div>
+    <a asp-page="./Index">Back to List</a>
+</div>
