--- a/Areas/Identity/Pages/Account/Admin/ManageUsers.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/ManageUsers.cshtml
@@ -6,7 +6,6 @@
     // Til að nota eigið _Layout þarf að gefa því absolute path í Index.
     Layout = "~/Areas/Identity/Pages/Account/Admin/_Layout.cshtml";
 }
-
 <h2>Manage users</h2>
 <table>
     <tr>
@@ -22,6 +21,23 @@
         <th>affiliation</th>
         <th>Payment confirmed</th>
     </tr>
-    
+    @{ 
+        foreach(var item in Model.user)
+        {
+            <tr>
+                <td>@item.firstName</td>
+                <td>@item.middleName</td>
+                <td>@item.lastName</td>
+                <td>@item.address</td>
+                <td>@item.city</td>
+                <td>@item.PhoneNumber</td>
+                <td>@item.Email</td>
+                <td>@item.EmailConfirmed</td>
+                <td>vantar</td>
+                <td>@item.affiliation</td>
+                <td>vantar</td>
+            </tr>
+        }
+    }
 </table>
 
