Board members að koma til

--- a/Areas/Identity/Pages/Account/Admin/ManageUsers.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/ManageUsers.cshtml
@@ -6,7 +6,7 @@
     // Til að nota eigið _Layout þarf að gefa því absolute path í Index.
     Layout = "~/Areas/Identity/Pages/Account/Admin/_Layout.cshtml";
 }
-
+<p>@Model.user[0].address</p>
 <h2>Manage users</h2>
 <table>
     <tr>
