grant og event er komið inn á heimasvæðið

--- a/Areas/Identity/Pages/Account/Admin/_AdminNav.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/_AdminNav.cshtml
@@ -7,5 +7,6 @@
     <li class="@ManageAdminPages.ChangePasswordNavClass(ViewContext)"><a id="change-password" asp-page="./ChangePassword">Password</a></li>
     <li class="@ManageAdminPages.ManageUsersNavClass(ViewContext)"><a id="change-password" asp-page="./ManageUsers">Manage Users</a></li>
     <li class="@ManageAdminPages.ManageEventsNavClass(ViewContext)"><a id="change-password" asp-page="./Events/Index">Edit events</a></li>
+    <li class="@ManageAdminPages.ManageGrantsNavClass(ViewContext)"><a id="change-password" asp-page="./Grants/Index">Edit Grants</a></li>
     
 </ul>
