--- a/Areas/Identity/Pages/Account/Admin/Grants/Create.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Grants/Create.cshtml
@@ -1,32 +1,24 @@
 ﻿@page
-@model webApi.Pages.Grants.EditModel
+@model webApi.Pages.Grants.CreateModel
 
 @{
-    ViewData["Title"] = "Edit";
-
+    ViewData["Title"] = "Create";
+    Layout = "~/Areas/Identity/Pages/Account/Admin/_Layout.cshtml";
 }
-
 
 <div class="cont">
     <div class="container">
         <div>
-            <h1>Edit Grant</h1>
+            <h1>Create Grant</h1>
         </div>
     </div>
 </div>
 
-
-
 <div class="cart container">
-    <div class="card mb-3" style="width: 36rem;">
-        <img class="card-img-top" src="~/images/grants/@Model.Grant.Image" alt="Card image cap">
-        <div class="card-body">
-            <h5 class="card-title">@Model.Grant.Title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    <div class="row">
+        <div class="col-md-12">
             <form method="post" asp-controller="UploadFiles" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <input type="hidden" asp-for="Grant.Id" />
                 <div class="form-group">
                     <label asp-for="Grant.Title" class="control-label"></label>
                     <input asp-for="Grant.Title" class="form-control" />
@@ -38,18 +30,21 @@
                     <span asp-validation-for="Grant.text" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="file" name="files" value="Grant.Image" multiple />
+                    <input type="file" name="files" multiple />
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Save" class="btn btn-default" />
+                    <input type="submit" value="Create" class="btn btn-default" />
                 </div>
-                <a asp-page="./Index">Back to List</a>
             </form>
         </div>
     </div>
+
 </div>
 
 
+<div>
+    <a asp-page="Index">Back to List</a>
+</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
