--- a/Areas/Identity/Pages/Account/Admin/Grants/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Grants/Index.cshtml
@@ -24,8 +24,8 @@
 
         <div class="card-size">
             <div class="card" style="width: 18rem;">
-                <img class="images card-image-top" src="~/images/grants/@Html.DisplayFor(modelItem => item.Image)" alt="Card image cap">
                 <div class="card-body">
+                    <a card-image-top" href="~/images/grants/@Html.DisplayFor(modelItem => item.Image)" alt="Card image cap">@Html.DisplayFor(modelItem => item.Image)</a>
                     <h5 class="card-title text-center">Title: @Html.DisplayFor(modelItem => item.Title)</h5>
                     <p class="card-text">Text: @Html.DisplayFor(modelItem => item.Title)  Lorem Ipsum.</p>
                     <p class="card-text">Starts: Date: Vanntar</p>
