--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -25,7 +25,23 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark navbar-full fixed-top" style="background-color: #222; border-color:#080808" >
+
+    <div class="cont top-container" style="background-color: #222;">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h1 style="color: #ffffff;">EABEA</h1>
+                    <p style="color: #ffffff;">The European Association for Behaviour Analysis (EABA) is an international organisation that aims to promote behaviour analysis in Europe and to provide an international forum within Europe for the study and discussion of matters relevant to behavior analysis.</p>
+                </div>
+                <div class="col">
+                    <a><img class="logo-cont" alt="Brand" src="~/images/logo.png"></a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <nav class="navbar header navbar-expand-lg navbar-dark navbar-full" id="myHeader" style="background-color: #222; border-color:#080808">
         <div class="container">
             <a class="navbar-brand" href="#">EABA</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,13 +53,15 @@
                     <li class="nav-item active"><a class="nav-link" asp-page="/Index">Home</a></li>
                     <li class="nav-item active"><a class="nav-link" asp-page="/About">About</a></li>
                     <li class="nav-item active"><a class="nav-link" asp-page="/Contact">Contact</a></li>
-                    <li class="nav-item active"><a class="nav-link" asp-page="/BoardMembers">Board of Directors</a></li>            
+                    <li class="nav-item active"><a class="nav-link" asp-page="/BoardMembers">Board of Directors</a></li>
                     <li class="nav-item active"><a class="nav-link" asp-page="/Event">Events</a></li>
                 </ul>
                 <partial name="_LoginPartial" />
             </div>
         </div>
     </nav>
+
+
 
     <div>
         <div id="fb-root"></div>
@@ -56,15 +74,15 @@
                 fjs.parentNode.insertBefore(js, fjs);
             }(document, 'script', 'facebook-jssdk'));</script>
     </div>
-        
+
     <partial name="_CookieConsentPartial" />
 
-    <div class="container body-content">
+    <div class="container body-content content">
 
         @RenderBody()
-    
+
     </div>
-        <partial name="_footer"/>
+    <partial name="_footer" />
 
 
     <environment include="Development">
