--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -62,8 +62,6 @@
         </div>
     </nav>
 
-    <partial name="_Carousel" />
-
 
     <div>
         <div id="fb-root"></div>
@@ -77,7 +75,7 @@
             }(document, 'script', 'facebook-jssdk'));</script>
     </div>
 
-    <partial name="_CookieConsentPartial" />
+    <!--<partial name="_CookieConsentPartial" />-->
 
     <div class="container body-content">
 
